kubernetes/apps/cluster-utilities/harbor/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: harbor
spec:
  parentRefs:
    - name: internal
      kind: Gateway
      namespace: network
      sectionName: https
  hostnames:
    - harbor.${SECRET_DOMAIN}
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /api/
      - path:
          type: PathPrefix
          value: /service/
      - path:
          type: PathPrefix
          value: /v2/
      - path:
          type: PathPrefix
          value: /c/
      backendRefs:
        - name: harbor-core
          port: 80
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: harbor-portal
          port: 80
